// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render banner banner content 1`] = `
<div
  className="vxteaser-banner vxteaser--has-skew -view1"
  onClick={[Function]}
  style={
    Object {
      "backgroundImage": "url('url0')",
      "height": "260px",
    }
  }
>
  <BannerContent
    config={
      Object {
        "fixedHeights": Array [
          Object {
            "backgroundUrl": "url0",
            "height": 500,
          },
          Object {
            "backgroundUrl": "url1",
            "greaterThan": 1200,
            "height": 260,
          },
        ],
      }
    }
  />
</div>
`;

exports[`render banner banner content tablet 1`] = `
<div
  className="vxteaser-banner vxteaser--has-no-skew -view2"
  onClick={[Function]}
  style={
    Object {
      "backgroundImage": "url('url1')",
      "height": "500px",
    }
  }
>
  <BannerContent
    config={
      Object {
        "fixedHeights": Array [
          Object {
            "backgroundUrl": "url0",
            "height": 500,
          },
          Object {
            "backgroundUrl": "url1",
            "greaterThan": 1200,
            "height": 260,
          },
        ],
      }
    }
    windowWidth={768}
  />
</div>
`;

exports[`render banner banner theme 1`] = `
<div
  className="vxteaser-banner vxteaser--has-skew -view1 -theme-white"
  onClick={[Function]}
  style={
    Object {
      "backgroundImage": "url('url0')",
      "height": "260px",
    }
  }
>
  <BannerContent
    config={
      Object {
        "fixedHeights": Array [
          Object {
            "backgroundUrl": "url0",
            "height": 500,
          },
          Object {
            "backgroundUrl": "url1",
            "greaterThan": 1200,
            "height": 260,
          },
        ],
      }
    }
  />
</div>
`;

exports[`render banner empty banner 1`] = `""`;
